--- a/public/assets/css/admin/business-form.css
+++ b/public/assets/css/admin/business-form.css
@@ -184,3 +184,8 @@ textarea {
 .preview-image-title {
     padding: 20px 0px;
 }
+.required-label::after {
+    content: " *";
+    color: red;
+    font-weight: bold;
+}
