--- a/public/assets/css/admin/tourist_places.css
+++ b/public/assets/css/admin/tourist_places.css
@@ -33,26 +33,7 @@
     border-radius: 5px;
 }
 
-.filter-btn,
-.reset-btn {
-    background-color: #2596be;
-    color: white;
-    padding: 8px 15px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
 
-.filter-btn:hover,
-.reset-btn:hover {
-    background-color: #1abc9c;
-}
-
-.reset-btn {
-    text-decoration: none;
-    display: inline-block;
-    margin-left: 10px;
-}
 
 /* Table styles */
 .table-container {
@@ -212,12 +193,18 @@
     display: inline-block;
     font-size: 12px;
     font-weight: bold;
-    color: #ffffff; /* White text for better contrast */
-    background-color: #2c3e50; /* Your theme color */
-    padding: 4px 8px; /* Space around the text */
-    border-radius: 8px; /* Rounded corners */
-    text-transform: capitalize; /* Capitalize the label text */
+    color: #ffffff;
+    /* White text for better contrast */
+    background-color: #2c3e50;
+    /* Your theme color */
+    padding: 4px 8px;
+    /* Space around the text */
+    border-radius: 8px;
+    /* Rounded corners */
+    text-transform: capitalize;
+    /* Capitalize the label text */
 }
+
 /* General Styles for Alerts */
 .alert {
     padding: 6px 10px;
@@ -235,14 +222,16 @@
 /* Success Alert Styles */
 /* Success Alert Styles */
 .alert-success {
-    background: linear-gradient(135deg, #2c3e50, #34495e); /* Dark blue-gray to a lighter blue-gray */
+    background: linear-gradient(135deg, #2c3e50, #34495e);
+    /* Dark blue-gray to a lighter blue-gray */
     color: #ffffff;
     border-left: 5px solid #2c3e50;
 }
 
 /* Error Alert Styles */
 .alert-danger {
-    background: linear-gradient(135deg, #2c3e50, #7f8c8d); /* Dark blue-gray to a lighter gray */
+    background: linear-gradient(135deg, #2c3e50, #7f8c8d);
+    /* Dark blue-gray to a lighter gray */
     color: #ffffff;
     border-left: 5px solid #2c3e50;
 }
@@ -291,6 +280,7 @@
         opacity: 0;
         transform: translateY(-20px);
     }
+
     100% {
         opacity: 1;
         transform: translateY(0);
